# datasets

./: .gitignore  .gitmodules  AGENTS.md  NOTE.md  NOTES.md  README.md  create_env.sh  environment.yml  pyproject.toml  wind_datasets.local.toml.example
experiment/: README.md  __init__.py  chronos-2-exogenous.csv  chronos-2.csv  ltsf-linear.csv
plan/: AGENTS.md  wind_farm_design_revised_v3_input_reorg.tex  world_model_baselines_v1_audit.md
scripts/: create_env.sh  environment.yml  generate_source_column_policies.py  generate_visualization_notebooks.py  latex_build_local.sh  rebuild_cache.sh
src/: README.md  persistence.ipynb  visualization_hill_of_towie.ipynb  visualization_kelmarsh.ipynb  visualization_penmanshiel.ipynb  visualization_sdwpf_kddcup.ipynb
test/: conftest.py  helpers.py  test_agcrn.py  test_agcrn_masked.py  test_cache_dag.py  test_chronos2_exogenous.py  test_chronos2_power_only.py  test_config.py  test_covariate_packs.py  test_end_to_end.py  test_experiment_registry.py  test_farm_window_index.py  test_feature_policy.py  test_feature_protocols.py  test_greenbyte_parser.py  test_ltsf_linear.py  test_metadata_and_static.py  test_packaging.py  test_persistence.py  test_published_outputs.py  test_rebuild_cache_cli.py  test_run_exogenous_full.py  test_run_ltsf_linear_full.py  test_run_power_only_full.py  test_run_records.py  test_source_column_policy.py  test_source_schema.py  test_task_spec.py  test_tft.py  test_visualization.py  test_window_protocols.py  test_world_model_agcrn_v1.py  test_world_model_baselines_v1.py  test_world_model_rollout_v1.py  (+3 more)
(+395 files in other folders)
